edit expense and documentation

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="save">Save</string>
     <string name="view_expenses">View expenses</string>
     <string name="view_categories">View categories</string>
-    <string name="view_users">Select account</string>
+    <string name="view_users">Select user</string>
     <string name="add_new">Add new</string>
 
     <!-- fragment level -->
